--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -71,6 +71,30 @@ jobs:
         id: plan
         continue-on-error: true
         run: |
-          terraform plan -input=false -no-color    
+          terraform plan -input=false -no-color   
+
+      - name: Reformat Plan
+        run: |
+          echo '${{ steps.plan.outputs.stdout || steps.plan.outputs.stderr }}' \
+          | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt          
+
+      - name: Put Plan in Env Var
+        run: |
+          PLAN=$(cat plan.txt)
+          echo "PLAN<<EOF" >> $GITHUB_ENV
+          echo "$PLAN" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV          
+
+      - name: Post Plan to GitHub PR
+        uses: mshick/add-pr-comment@v1
+        with:
+          allow-repeats: true
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token-user-login: 'github-actions[bot]'
+          message: |
+            ##  plan
+            ```diff
+            ${{ env.PLAN }}
+            ```             
 
         
