--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -1,31 +1,43 @@
+
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: obligatorio-ingress
+  name: ingress
   annotations:
     ingress.kubernetes.io/rewrite-target: /$1
+    #nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
 spec:
   rules:
-  - http:
+  
+  -  http:
       paths:
         - path: /payments
           pathType: Prefix
           backend:
-            service: 
+            service:
               name: payments-service
               port:
-                number: 8080
+                number: 80
+        - path: /orders
+          pathType: Prefix
+          backend:
+            service:
+              name: orders-service
+              port:
+                number: 80
         - path: /products
           pathType: Prefix
           backend:
-            service: 
+            service:
               name: products-service
               port:
-                number: 8080
+                number: 80
         - path: /shipping
           pathType: Prefix
           backend:
-            service: 
+            service:
               name: shipping-service
               port:
-                number: 8080
+                number: 80                
+        
