--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -74,7 +74,7 @@ jobs:
           terraform plan -input=false -no-color  
 
       - name: Apply Terraform
-        id: plan
+        id: apply
         continue-on-error: false
         run: |
           terraform apply -auto-approve
